--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "prioxy": "http://localhost:3000",
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/react": "^5.11.3",
+    "@fullcalendar/timegrid": "^5.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "calender": "^1.0.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
