--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "calender": "^1.0.3",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-google-map": "^3.1.1",
     "react-google-maps": "^9.4.5",
