--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "prioxy": "http://localhost:3000",
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -16,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "calender": "^1.0.3",
     "date-fns": "^2.29.3",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-date-range": "^1.4.0",
